# OpenGeoLab

./: .clang-tidy  .gitignore  .qmllint.ini  CMakeLists.txt  README.en.md  README.md  doxygen_comment_style.md  doxygen_comment_style_cn.md  new_plan.md  plan.md  plan_new.md  qtquickcontrols2.conf
.github/: copilot-instructions.md
.github/agents/: CodeReviewer.agent.md  expert-cpp-software-engineer.agent.md
.github/instructions/: cmake.instructions.md  documentation.instructions.md  opengeolab-cpp.instructions.md  python-automation.instructions.md  qml-ui.instructions.md  (+1 more)
.zed/: debug.json  tasks.json
apps/: CMakeLists.txt
apps/OpenGeoLabApp/: CMakeLists.txt
apps/OpenGeoLabApp/include/ogl/app/: AppLogger.hpp  EmbeddedPythonRuntime.hpp  OpenGeoLabController.hpp  UiSettingsController.hpp
apps/OpenGeoLabApp/qml/: ActionRegistry.qml  Main.qml  RibbonConfig.qml
apps/OpenGeoLabApp/qml/components/: ActionButton.qml  ActionFeaturePage.qml  AppIcon.qml  AxisOptionChip.qml  CodePanel.qml  FeaturePageBase.qml  FeatureSegmentTabs.qml  GeometryCreateFeaturePage.qml  GeometryCreateInspectPage.qml  GeometryCreateOrientationSection.qml  GeometryCreatePageLogic.js  GeometryCreatePlacementPage.qml  GeometryCreateShapePage.qml  OperationCornerOverlay.qml  OperationLogEntryDelegate.qml  OperationLogLevelChip.qml  OperationLogPanel.qml  OperationProgressOverlay.qml  ParameterInputField.qml  RibbonTile.qml  SectionCard.qml  StatChip.qml  StatusMessageBanner.qml  qmldir
apps/OpenGeoLabApp/qml/sections/: AppHeader.qml  HeaderMenuPanel.qml  HeaderRibbonGroup.qml  OutputStrip.qml  SidebarPanel.qml  ViewportPanel.qml  qmldir
apps/OpenGeoLabApp/qml/theme/: AppTheme.qml  qmldir
apps/OpenGeoLabApp/src/: EmbeddedPythonRuntime.cpp  OpenGeoLabController.cpp  OperationLogModel.cpp  OperationLogModel.hpp  OperationLogService.cpp  OperationLogService.hpp  QmlSpdlogSink.cpp  QmlSpdlogSink.hpp  UiSettingsController.cpp  main.cpp
apps/OpenGeoLabApp/tests/: CMakeLists.txt  test_embedded_python_runtime.cpp
apps/OpenGeoLabApp/translations/: opengeolab_zh_CN.ts
cmake/: tools.cmake
doc/: plan.en.md  plan.md
docs/: architecture.en.md  architecture.md  json_protocols.en.md  json_protocols.md  llm_geometry_mesh_protocol.md  render_architecture.md  render_design.md  render_migration_guide.md  代码架构文档.md
libs/: CMakeLists.txt
libs/command/: CMakeLists.txt
libs/command/include/ogl/command/: CommandService.hpp
libs/command/src/: CommandService.cpp
libs/command/tests/: CMakeLists.txt  test_command_recorder.cpp
libs/core/: CMakeLists.txt
libs/core/include/ogl/core/: ComponentDispatcherLogger.hpp  ComponentRequestDispatcher.hpp  IService.hpp  ModuleLogger.hpp
libs/core/src/: ComponentRequestDispatcher.cpp
libs/geometry/: CMakeLists.txt
libs/geometry/include/ogl/geometry/: CreateBoxAction.hpp  CreateCylinderAction.hpp  CreateSphereAction.hpp  CreateTorusAction.hpp  GeometryAction.hpp  GeometryComponentRegistration.hpp  GeometryLogger.hpp  GeometryModel.hpp  InspectModelAction.hpp  PlaceholderGeometryModel.hpp
libs/geometry/src/: CreateBoxAction.cpp  CreateCylinderAction.cpp  CreateSphereAction.cpp  CreateTorusAction.cpp  GeometryActionUtilities.hpp  GeometryComponentRegistration.cpp  GeometryModel.cpp  InspectModelAction.cpp  PlaceholderGeometryModel.cpp
libs/geometry/tests/: CMakeLists.txt  test_geometry.cpp  test_placeholder_geometry.cpp
libs/render/: CMakeLists.txt
libs/render/include/ogl/render/: BuildFrameAction.hpp  PlaceholderRenderFrame.hpp  RenderAction.hpp  RenderComponentRegistration.hpp  RenderFrame.hpp  RenderLogger.hpp
libs/render/src/: BuildFrameAction.cpp  PlaceholderRenderFrame.cpp  RenderComponentRegistration.cpp  RenderFrame.cpp
libs/render/tests/: CMakeLists.txt  test_render.cpp
libs/scene/: CMakeLists.txt
libs/scene/include/ogl/scene/: BuildSceneAction.hpp  PlaceholderSceneGraph.hpp  SceneAction.hpp  SceneComponentRegistration.hpp  SceneGraph.hpp  SceneLogger.hpp
libs/scene/src/: BuildSceneAction.cpp  PlaceholderSceneGraph.cpp  SceneComponentRegistration.cpp  SceneGraph.cpp
libs/scene/tests/: CMakeLists.txt  test_scene.cpp
libs/selection/: CMakeLists.txt
libs/selection/include/ogl/selection/: BoxSelectAction.hpp  PickEntityAction.hpp  PlaceholderSelectionResult.hpp  SelectionAction.hpp  SelectionComponentRegistration.hpp  SelectionLogger.hpp  SelectionResult.hpp
libs/selection/src/: BoxSelectAction.cpp  PickEntityAction.cpp  PlaceholderSelectionResult.cpp  SelectionActionUtilities.hpp  SelectionComponentRegistration.cpp  SelectionResult.cpp
libs/selection/tests/: CMakeLists.txt  test_placeholder_selection.cpp  test_selection.cpp
python/: CMakeLists.txt
python/python_wrapper/: CMakeLists.txt
python/python_wrapper/include/ogl/python_wrapper/: OpenGeoLabPythonBridge.hpp
python/python_wrapper/src/: OpenGeoLabPythonBridge.cpp  module.cpp
python/python_wrapper/tests/: CMakeLists.txt  test_opengeolab_bridge.py  test_opengeolab_bridge_host.cpp
source/: Main.qml  cube_renderer.cpp  cube_renderer.h  geometry.h  geometry3d.cpp  geometry3d.h  logger.cpp  logger.hpp  main.cpp  model_importer.cpp  model_importer.h  opengl_renderer.cpp  opengl_renderer.h  squircle.cpp  squircle.h  triangle.cpp  triangle.h
source/widgets/FramelessWindow/: CMakeLists.txt  README.md  quickitemdelegate_p.h  quickwindowagent.h  quickwindowagent_p.h  qwkplugin.h
source/widgets/QWKQuickWindow/: CMakeLists.txt  qmldir  quickitemdelegate_p.h  quickwindowagent.h
test/: CMakeLists.txt
test/source/: backend_service_test.cpp  camera_test.cpp  entity_index_test.cpp  entity_relations_test.cpp  geometry_builder_test.cpp  geometry_creator_test.cpp  geometry_document_test.cpp  geometry_model_test.cpp  geometry_tests.cpp  geometry_types_test.cpp  hdf5_usage_example.cpp  hierarchy_relationship_test.cpp  main.cpp  mesh_types_test.cpp  model_reader_import_logging.cpp  primitive_factory_test.cpp  reader_test.cpp  render_data_test.cpp  signal_tests.cpp  tessellation_test.cpp  tessellator_test.cpp  test_geometry_entity.cpp  test_geometry_types.cpp  trackball_test.cpp
(+466 files in other folders)
